# your-life-in-x

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Cargo.toml  README.md  flake.nix  gdbinit
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: rust_ci.yml
esp/: Cargo.toml
esp/.cargo/: config.toml
simulation/: Cargo.toml
simulation/src/: main.rs
your-life-in-x/: Cargo.toml
your-life-in-x/src/: lib.rs
