[package]
name = "your-life-in-x"
version = "0.1.0"
edition = "2024"
authors = ["Marcelo Borges <me@marceloborges.dev>"]

[dependencies]
embedded-graphics = "0.8.1"
embedded-text = "0.7.2"
eg-seven-segment = "0.2.0"
tinybmp = "0.6.0"
tinytga = "0.5.0"
weact-studio-epd = { version = "0.1.2", features = ["blocking"] }
